syntax = "proto3";

option go_package="github.com/KoalaOps/GreetingService";

service Greetings {
   rpc GetGreeting(GreetingRequest) returns (GreetingResponse) {
   }
}

message GreetingRequest {
}

message GreetingResponse {
    optional string greeting = 1;
}